--- a/pages/contacts/contacts.css
+++ b/pages/contacts/contacts.css
@@ -1,1 +1,41 @@
-/*# sourceMappingURL=contacts.css.map */
+.form-instructions {
+  margin-top: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-instructions p {
+  max-width: 60vw;
+  text-align: center;
+  color: rgb(9, 48, 121);
+  font-weight: bolder;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5vh;
+  gap: 4px;
+}
+#contact-form input, #contact-form textarea {
+  width: 60vw;
+  padding: 10px 20px;
+  border: 2px solid rgb(9, 48, 121);
+}
+#contact-form button {
+  padding: 10px 40px;
+  border: none;
+  background-color: rgb(9, 48, 121);
+  color: white;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: bold;
+  font-size: large;
+  cursor: pointer;
+  transition: font-size 0.1s;
+}
+#contact-form button:hover {
+  font-size: larger;
+}/*# sourceMappingURL=contacts.css.map */
